# 8-Puzzle-Solver

./: board.py  constants.py  main.py  pyproject.toml  solver.py
